@@ -259,7 +259,7 @@
     screen layouts called views.  As you will see, the views are accessed by 
     clicking the icons in the left hand toolbar in the &app; window.</para> 
     <sect2 id="mrp-task-view">
-	<title>Task View:</title> 
+	<title>Task View</title> 
         <para>
 	  Tasks are also shown on the Gantt view, but the Task view shows
 	  more detail for each task.
@@ -300,7 +300,7 @@
 	</itemizedlist> 
     </sect2>
     <sect2 id="mrp-gantt-view">
-	<title>Gantt View:</title> 
+	<title>Gantt View</title> 
 	<para>The Gantt View combines the Gantt chart with a shortened version
 	  of the task view.
 	</para>
@@ -335,7 +335,7 @@
 	</itemizedlist> 
     </sect2>
     <sect2 id="mrp-resource-view">
-	<title>Resource View:</title> 
+	<title>Resource View</title> 
           <figure id="resource-view" float="1">
             <title>&app; Resource View</title>
             <screenshot>
@@ -358,7 +358,7 @@
 	</itemizedlist> 
     </sect2>
     <sect2 id="mrp-resource-usage-view">
-	<title>Resource Usage View:</title> 
+	<title>Resource Usage View</title> 
           <figure id="resource-usage-view" float="1">
             <title>&app; Resource Usage View</title>
             <screenshot>
