@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<project name="Project X" company="Planner Community" manager="Richard Hult" phase="Implementation" project-start="20030224T000000Z" mrproject-version="2" calendar="1">
+<project name="Project X" company="Planner Community" manager="Richard Hult" phase="Implementation" project-start="20040701T000000Z" mrproject-version="2" calendar="1">
   <properties>
     <property name="My-Property" type="text" owner="project" label="My Property" description="Just a test"/>
     <property name="cost" type="cost" owner="resource" label="Cost" description="standard cost for a resource"/>
@@ -14,9 +14,9 @@
   </phases>
   <calendars>
     <day-types>
-      <day-type id="0" name="Arbete" description="En standardarbetsdag"/>
-      <day-type id="1" name="Ledigt" description="En ledig standarddag"/>
-      <day-type id="2" name="Anv&#xE4;nd bas" description="Anv&#xE4;nd dag fr&#xE5;n baskalender"/>
+      <day-type id="0" name="Working" description="A default working day"/>
+      <day-type id="1" name="Nonworking" description="A default non working day"/>
+      <day-type id="2" name="Use base" description="Use day from base calendar"/>
     </day-types>
     <calendar id="1" name="Default">
       <default-week mon="0" tue="0" wed="0" thu="0" fri="0" sat="1" sun="1"/>
@@ -30,59 +30,58 @@
     </calendar>
   </calendars>
   <tasks>
-    <task id="1" name="Project X" note="" work="1300800" start="20030224T000000Z" end="20030428T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
-      <task id="2" name="Analysis" note="" work="230400" start="20030224T000000Z" end="20030310T142000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
-      <task id="3" name="Report" note="" work="0" start="20030310T142000Z" end="20030310T142000Z" percent-complete="0" priority="0" type="milestone" scheduling="fixed-work">
+    <task id="1" name="Project X" note="" work="1118400" start="20040701T000000Z" end="20040824T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+      <task id="2" name="Analysis" note="" work="115200" start="20040701T000000Z" end="20040708T104000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
+      <task id="3" name="Report" note="" work="0" start="20040708T104000Z" end="20040708T104000Z" percent-complete="0" priority="0" type="milestone" scheduling="fixed-work">
         <predecessors>
           <predecessor id="1" predecessor-id="2" type="FS"/>
         </predecessors>
       </task>
-      <task id="4" name="Prototype" note="" work="172800" start="20030310T142000Z" end="20030318T142000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+      <task id="4" name="Prototype" note="" work="144000" start="20040708T104000Z" end="20040715T104000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
         <predecessors>
           <predecessor id="1" predecessor-id="3" type="FS"/>
         </predecessors>
-        <task id="5" name="Design prototype" note="" work="144000" start="20030310T142000Z" end="20030314T142000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
-        <task id="6" name="Implementation" note="" work="144000" start="20030310T142000Z" end="20030317T142000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
-        <task id="7" name="Evaluation" note="" work="28800" start="20030317T142000Z" end="20030318T142000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+        <task id="5" name="Design prototype" note="" work="86400" start="20040708T104000Z" end="20040713T104000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
+        <task id="6" name="Implementation" note="" work="144000" start="20040708T104000Z" end="20040714T104000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
+        <task id="7" name="Evaluation" note="" work="28800" start="20040714T104000Z" end="20040715T104000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
           <predecessors>
-            <predecessor id="1" predecessor-id="5" type="FS"/>
             <predecessor id="1" predecessor-id="6" type="FS"/>
           </predecessors>
         </task>
-        <task id="8" name="Report" note="" work="0" start="20030318T142000Z" end="20030318T142000Z" percent-complete="0" priority="0" type="milestone" scheduling="fixed-work">
+        <task id="8" name="Report" note="" work="0" start="20040715T104000Z" end="20040715T104000Z" percent-complete="0" priority="0" type="milestone" scheduling="fixed-work">
           <predecessors>
             <predecessor id="1" predecessor-id="7" type="FS"/>
           </predecessors>
         </task>
       </task>
-      <task id="9" name="Product" note="" work="820800" start="20030318T142000Z" end="20030428T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+      <task id="9" name="Product" note="" work="820800" start="20040715T104000Z" end="20040824T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
         <predecessors>
           <predecessor id="1" predecessor-id="8" type="FS"/>
         </predecessors>
-        <task id="10" name="Summarize issues" note="" work="86400" start="20030318T142000Z" end="20030320T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
-        <task id="11" name="Finalize design" note="" work="144000" start="20030320T092000Z" end="20030327T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+        <task id="10" name="Summarize issues" note="" work="86400" start="20040715T104000Z" end="20040716T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
+        <task id="11" name="Finalize design" note="" work="144000" start="20040716T154000Z" end="20040723T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
           <predecessors>
             <predecessor id="1" predecessor-id="10" type="FS"/>
           </predecessors>
         </task>
-        <task id="12" name="Implementation" note="" work="432000" start="20030327T092000Z" end="20030417T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+        <task id="12" name="Implementation" note="" work="432000" start="20040723T154000Z" end="20040813T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
           <predecessors>
             <predecessor id="1" predecessor-id="11" type="FS"/>
           </predecessors>
-          <task id="13" name="Back-end" note="" work="432000" start="20030327T092000Z" end="20030417T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
-          <task id="14" name="Front-end" note="" work="432000" start="20030327T092000Z" end="20030417T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
+          <task id="13" name="Back-end" note="" work="432000" start="20040723T154000Z" end="20040813T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
+          <task id="14" name="Front-end" note="" work="432000" start="20040723T154000Z" end="20040813T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work"/>
         </task>
-        <task id="15" name="Evaluation" note="" work="57600" start="20030417T092000Z" end="20030421T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+        <task id="15" name="Evaluation" note="" work="57600" start="20040813T154000Z" end="20040817T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
           <predecessors>
             <predecessor id="1" predecessor-id="12" type="FS"/>
           </predecessors>
         </task>
-        <task id="16" name="QA" note="" work="144000" start="20030421T092000Z" end="20030428T092000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
+        <task id="16" name="QA" note="" work="144000" start="20040817T154000Z" end="20040824T154000Z" percent-complete="0" priority="0" type="normal" scheduling="fixed-work">
           <predecessors>
             <predecessor id="1" predecessor-id="15" type="FS"/>
           </predecessors>
         </task>
-        <task id="17" name="Report" note="" work="0" start="20030428T092000Z" end="20030428T092000Z" percent-complete="0" priority="0" type="milestone" scheduling="fixed-work">
+        <task id="17" name="Report" note="" work="0" start="20040824T154000Z" end="20040824T154000Z" percent-complete="0" priority="0" type="milestone" scheduling="fixed-work">
           <predecessors>
             <predecessor id="1" predecessor-id="16" type="FS"/>
           </predecessors>
@@ -92,37 +91,38 @@
   </tasks>
   <resource-groups/>
   <resources>
-    <resource id="1" name="Lincoln Phipps" short-name="LP" type="1" units="0" email="" note="" std-rate="0">
+    <resource id="1" name="Alvaro del Castillo" short-name="ACS" type="1" units="0" email="" note="" std-rate="0">
       <properties>
         <property name="cost" value=""/>
       </properties>
     </resource>
-    <resource id="2" name="Mikael Hallendal" short-name="MH" type="1" units="0" email="" note="" std-rate="0">
+    <resource id="2" name="Richard Hult" short-name="RH" type="1" units="0" email="" note="" std-rate="0">
       <properties>
         <property name="cost" value=""/>
       </properties>
     </resource>
-    <resource id="3" name="Richard Hult" short-name="RH" type="1" units="0" email="" note="" std-rate="0">
+    <resource id="3" name="Mikael Hallendal" short-name="MH" type="1" units="0" email="" note="" std-rate="0">
       <properties>
         <property name="cost" value=""/>
       </properties>
     </resource>
-    <resource id="4" name="Alvaro del Castillo" short-name="ACS" type="1" units="0" email="" note="" std-rate="0">
+    <resource id="4" name="Lincoln Phipps" short-name="LP" type="1" units="0" email="" note="" std-rate="0">
       <properties>
         <property name="cost" value=""/>
       </properties>
     </resource>
   </resources>
   <allocations>
-    <allocation task-id="16" resource-id="1" units="100"/>
+    <allocation task-id="2" resource-id="1" units="75"/>
+    <allocation task-id="15" resource-id="1" units="100"/>
+    <allocation task-id="6" resource-id="2" units="25"/>
     <allocation task-id="10" resource-id="2" units="100"/>
-    <allocation task-id="6" resource-id="2" units="100"/>
-    <allocation task-id="14" resource-id="2" units="100"/>
+    <allocation task-id="13" resource-id="2" units="100"/>
+    <allocation task-id="11" resource-id="2" units="100"/>
+    <allocation task-id="5" resource-id="2" units="100"/>
     <allocation task-id="10" resource-id="3" units="100"/>
-    <allocation task-id="13" resource-id="3" units="100"/>
-    <allocation task-id="11" resource-id="3" units="100"/>
-    <allocation task-id="5" resource-id="3" units="125"/>
-    <allocation task-id="2" resource-id="4" units="75"/>
-    <allocation task-id="15" resource-id="4" units="100"/>
+    <allocation task-id="6" resource-id="3" units="100"/>
+    <allocation task-id="14" resource-id="3" units="100"/>
+    <allocation task-id="16" resource-id="4" units="100"/>
   </allocations>
 </project>
