@@ -1,3 +1,7 @@
+2004-07-07  Richard Hult  <richard@imendio.com>
+
+	* docs/user-guide/C/planner.xml: Fix up.
+
 2004-07-05  Richard Hult  <richard@imendio.com>
 
 	* configure.in: Bump.
